added page content box

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -36,30 +36,33 @@
                 </div>
             </nav>
         </div>
-        <div class="content-container">
+        <div class="main-page">
             <nav class="left-navbar">
                 <ul>
                     <li>
                         <div class="sub-container" id="submenu-parent">
-                            <div class="">
-                                <a href="#logo" class="" style="font-size: 15px;"><i
-                                        class="fa-solid fa-house ms-2 me-3 p-0" style="font-size: 20px;"></i><span
-                                        class="leftNavbarTitle">Dashboard</span><i
-                                        class="fa-solid fa-angle-right ms-2 me-3"></i></a>
-                            </div>
+                            <a href="#logo" class="" style="font-size: 15px;">
+                                <div class="submenu-main-item">
+                                    <div>
+                                        <i class="fa-solid fa-home ms-2 me-3 p-0" style="font-size: 20px;"></i><span
+                                            class="leftNavbarTitle">Dashboard</span>
+                                    </div>
+                                    <i class="fa-solid fa-angle-right ms-2 me-3"></i>
+                                </div>
+                            </a>
                             <div class="submenu" id="submenu">
                                 <ul>
                                     <li>
-                                        <a href="#logo" class="" style="font-size: 15px;">Link 1</a>
+                                        <a href="#logo" class="p-3" style="font-size: 15px;">Link 1</a>
                                     </li>
                                     <li>
-                                        <a href="#logo" class="" style="font-size: 15px;">Link 2</a>
+                                        <a href="#logo" class="p-3" style="font-size: 15px;">Link 2</a>
                                     </li>
                                     <li>
-                                        <a href="#logo" class="" style="font-size: 15px;">Link 3</a>
+                                        <a href="#logo" class="p-3" style="font-size: 15px;">Link 3</a>
                                     </li>
                                     <li>
-                                        <a href="#logo" class="" style="font-size: 15px;">Link 4</a>
+                                        <a href="#logo" class="p-3" style="font-size: 15px;">Link 4</a>
                                     </li>
                                 </ul>
                             </div>
@@ -79,36 +82,39 @@
                     </li>
                     <li>
                         <div class="sub-container" id="submenu-parent1">
-                            <div class="">
-                                <a href="#logo" class="" style="font-size: 15px;"><i
-                                        class="fa-solid fa-link ms-2 me-3 p-0" style="font-size: 20px;"></i><span
-                                        class="leftNavbarTitle">Dashboard</span><i
-                                        class="fa-solid fa-angle-right ms-2 me-3"></i></a>
-                            </div>
+                            <a href="#logo" class="" style="font-size: 15px;">
+                                <div class="submenu-main-item">
+                                    <div>
+                                        <i class="fa-solid fa-link ms-2 me-3 p-0" style="font-size: 20px;"></i><span
+                                            class="leftNavbarTitle">Links</span>
+                                    </div>
+                                    <i class="fa-solid fa-angle-right ms-2 me-3"></i>
+                                </div>
+                            </a>
                             <div class="submenu" id="submenu1">
                                 <ul>
                                     <li>
-                                        <a href="#logo" class="" style="font-size: 15px;"><i
+                                        <a href="#logo" class="p-3" style="font-size: 15px;"><i
                                                 class="fa-brands fa-github ms-2 me-3" style="font-size: 20px;"></i><span
                                                 class="">Github</span></a>
                                     </li>
                                     <li>
-                                        <a href="#logo" class="" style="font-size: 15px;"><i
+                                        <a href="#logo" class="p-3" style="font-size: 15px;"><i
                                                 class="fa-brands fa-facebook ms-2 me-3"
                                                 style="font-size: 20px;"></i><span class="">Facebook</span></a>
                                     </li>
                                     <li>
-                                        <a href="#logo" class="" style="font-size: 15px;"><i
+                                        <a href="#logo" class="p-3" style="font-size: 15px;"><i
                                                 class="fa-brands fa-youtube ms-2 me-3"
                                                 style="font-size: 20px;"></i><span class="">Youtube</span></a>
                                     </li>
                                     <li>
-                                        <a href="#logo" class="" style="font-size: 15px;"><i
+                                        <a href="#logo" class="p-3" style="font-size: 15px;"><i
                                                 class="fa-brands fa-instagram ms-2 me-3"
                                                 style="font-size: 20px;"></i><span class="">Instagram</span></a>
                                     </li>
                                     <li>
-                                        <a href="#logo" class="" style="font-size: 15px;"><i
+                                        <a href="#logo" class="p-3" style="font-size: 15px;"><i
                                                 class="fa-brands fa-twitter ms-2 me-3"
                                                 style="font-size: 20px;"></i><span class="">Twitter</span></a>
                                     </li>
@@ -116,10 +122,125 @@
                             </div>
                         </div>
                     </li>
+                    <li>
+                        <span class="left-navbar-footer-text">@2023</span>
+                    </li>
                 </ul>
-                <span class="left-navbar-footer-text">@2023</span>
             </nav>
         </div>
+        <div class="page-content">
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+            <a>test</a><br>
+        </div>
+    </div>
     </div>
     <button class="button-base btn-toggle light-dark-mode-switch"><i
             class="fa-solid fa-circle-half-stroke"></i></button>
