added example content placeholders

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -127,118 +127,17 @@
                     </li>
                 </ul>
             </nav>
-        </div>
-        <div class="page-content">
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
-            <a>test</a><br>
+            <div class="page-content">
+                <div class="content-card">
+                    <h4>Joined recently</h4>
+                    <div class="card-recent-user">
+                        <span>Username</span>
+                        <img class="img-avatar-navbar"
+                            src="https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg?w=826&t=st=1696236212~exp=1696236812~hmac=d8bcc6497062f9d2efa20c118bd492fa1ccc8dee05415df40f5759bc802b2937"
+                            alt="Avatar">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     </div>
@@ -250,7 +149,6 @@
         subMenuList['submenu-parent'] = 'submenu';
         subMenuList['submenu-parent1'] = 'submenu1';
         $('document').ready(() => {
-            console.log(subMenuList);
             const timeout = setTimeout(function () { SetSubMenuPosition(subMenuList) }, 100);
             const btn = document.querySelector(".btn-toggle");
 
