added missing example content

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -128,13 +128,34 @@
                 </ul>
             </nav>
             <div class="page-content">
-                <div class="content-card">
+                <div class="card-base">
                     <h4>Joined recently</h4>
-                    <div class="card-recent-user">
+                    <div class="card-content-simple">
                         <span>Username</span>
-                        <img class="img-avatar-navbar"
-                            src="https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg?w=826&t=st=1696236212~exp=1696236812~hmac=d8bcc6497062f9d2efa20c118bd492fa1ccc8dee05415df40f5759bc802b2937"
+                        <img src="https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg?w=826&t=st=1696236212~exp=1696236812~hmac=d8bcc6497062f9d2efa20c118bd492fa1ccc8dee05415df40f5759bc802b2937"
                             alt="Avatar">
+                    </div>
+                </div>
+                <div class="card-base">
+                    <h4>Banned recently</h4>
+                    <div class="card-content-simple">
+                        <span>Username</span>
+                        <img src="https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg?w=826&t=st=1696236212~exp=1696236812~hmac=d8bcc6497062f9d2efa20c118bd492fa1ccc8dee05415df40f5759bc802b2937"
+                            alt="Avatar">
+                    </div>
+                </div>
+                <div class="card-base">
+                    <h4>Messages today</h4>
+                    <div class="card-content-simple">
+                        <span>48</span>
+                        <i class="fa-solid fa-message"></i>
+                    </div>
+                </div>
+                <div class="card-base">
+                    <h4>Users banned</h4>
+                    <div class="card-content-simple">
+                        <span>342</span>
+                        <i class="fa-solid fa-ban"></i>
                     </div>
                 </div>
             </div>
