added discord app oauth and php sessions

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,10 @@
             <label for="passwordInputBox">Password:</label>
             <input class="input-base input-password-icon" type="password" id="passwordInputBox" name="passwordBox">
             <button class="button-base w-100">Log In</button>
+            <div class="login-footer">
+                <a href="#register">Register</a>
+                <a href="discord-auth/oauth-init.php">Sign in with Discord</a>
+            </div>
         </div>
         <button class="button-base btn-toggle light-dark-mode-switch"><i
                 class="fa-solid fa-circle-half-stroke"></i></button>
